// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should be able to render first step form 1`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="azure-key-vault"
        >
          <svg
            height="37"
            id="bc93169a-24c4-4686-9f37-c7e4f53b3d34"
            viewBox="0 0 18 18"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <radialgradient
                cx="9"
                cy="9"
                gradientUnits="userSpaceOnUse"
                id="fb114c93-7c16-4540-899a-0796041629e6"
                r="8.5"
              >
                <stop
                  offset="0.18"
                  stop-color="#5ea0ef"
                />
                <stop
                  offset="0.56"
                  stop-color="#5c9fee"
                />
                <stop
                  offset="0.69"
                  stop-color="#559ced"
                />
                <stop
                  offset="0.78"
                  stop-color="#4a97e9"
                />
                <stop
                  offset="0.86"
                  stop-color="#3990e4"
                />
                <stop
                  offset="0.93"
                  stop-color="#2387de"
                />
                <stop
                  offset="0.99"
                  stop-color="#087bd6"
                />
                <stop
                  offset="1"
                  stop-color="#0078d4"
                />
              </radialgradient>
              <radialgradient
                cx="38.95"
                cy="182.07"
                gradientTransform="translate(-28.71 -163.24) scale(0.94 0.94)"
                gradientUnits="userSpaceOnUse"
                id="ec478bd3-5b38-4e7f-b661-11f355578bff"
                r="9.88"
              >
                <stop
                  offset="0.27"
                  stop-color="#ffd70f"
                />
                <stop
                  offset="0.49"
                  stop-color="#ffcb12"
                />
                <stop
                  offset="0.88"
                  stop-color="#feac19"
                />
                <stop
                  offset="1"
                  stop-color="#fea11b"
                />
              </radialgradient>
            </defs>
            <title>
              Icon-security-245
            </title>
            <path
              d="M9,.5A8.5,8.5,0,1,0,17.5,9,8.51,8.51,0,0,0,9,.5ZM9,16.34A7.34,7.34,0,1,1,16.34,9,7.34,7.34,0,0,1,9,16.34Z"
              fill="url(#fb114c93-7c16-4540-899a-0796041629e6)"
              id="aacf8311-a317-400f-b613-74bd00da5ce3"
            />
            <circle
              cx="9"
              cy="9"
              fill="#fff"
              r="7.34"
            />
            <g>
              <path
                d="M13.44,7.33a1.84,1.84,0,0,0,0-2.59h0L10.29,1.58a1.83,1.83,0,0,0-2.58,0h0L4.56,4.74a1.84,1.84,0,0,0,0,2.59L7.18,10a.51.51,0,0,1,.15.36v4.88a.63.63,0,0,0,.18.44l1.2,1.2a.41.41,0,0,0,.58,0l1.16-1.16h0l.68-.68a.25.25,0,0,0,0-.34l-.49-.49a.27.27,0,0,1,0-.37l.49-.49a.25.25,0,0,0,0-.34l-.49-.49a.27.27,0,0,1,0-.37l.49-.49a.25.25,0,0,0,0-.34l-.68-.69v-.25ZM9,2.35A1,1,0,0,1,9,4.42,1,1,0,1,1,9,2.35Z"
                fill="url(#ec478bd3-5b38-4e7f-b661-11f355578bff)"
                id="bd983c41-db73-40ec-a4f4-da1213fc9924"
              />
              <path
                d="M8.18,15.3h0a.23.23,0,0,0,.38-.17v-4a.24.24,0,0,0-.11-.2h0a.22.22,0,0,0-.34.2v4A.28.28,0,0,0,8.18,15.3Z"
                fill="#ff9300"
                id="ad2e7e44-9bfd-4775-8bf4-8ef26a544921"
                opacity="0.75"
              />
              <rect
                fill="#ff9300"
                height="0.61"
                id="a996fbff-3936-4b24-b407-369336c143ba"
                opacity="0.75"
                rx="0.28"
                width="5.17"
                x="6.48"
                y="5.79"
              />
              <rect
                fill="#ff9300"
                height="0.61"
                id="bb12d31c-3352-4a18-87dd-a169a4a8721d"
                opacity="0.75"
                rx="0.28"
                width="5.17"
                x="6.48"
                y="6.78"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.azureKeyVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.azureKeyVault.labels.setupVault
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          5
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
        >
          overview
        </p>
        <div
          class="StyledProps--font StyledProps--main connectorForm"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="min-height: 460px;"
                >
                  <div
                    class="StyledProps--font StyledProps--main main formElm"
                  >
                    <div
                      class="InputWithIdentifier--txtNameContainer TextInput--main"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="connectorDetailsStepFormAzureKeyVault_identifier"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            Id
                          </p>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          :
                        </p>
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <div
                              class="bp3-editable-text InputWithIdentifier--idValue"
                              tabindex="0"
                            >
                              <span
                                class="bp3-editable-text-content"
                                style="height: 1px; line-height: 1px; min-width: 0;"
                              >
                                dummy_name
                              </span>
                            </div>
                          </span>
                        </span>
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="Edit"
                          style="vertical-align: middle; cursor: pointer;"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="name-0"
                      >
                        <label
                          class="bp3-label"
                          for="name"
                        >
                          <span
                            class="Tooltip--acenter"
                            data-tooltip-id="connectorDetailsStepFormAzureKeyVault_name"
                          >
                            name
                          </span>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="name"
                              placeholder="common.namePlaceholder"
                              type="text"
                              value="dummy name"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="description-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main"
                    >
                      <label
                        class="Label--main bp3-label descriptionLabel"
                      >
                        optionalField
                        <span
                          class="bp3-icon StyledProps--main editOpen"
                          data-icon="Edit"
                          data-name="edit"
                          data-testid="tags-edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                    type="submit"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <span>
                        continue
                      </span>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should be able to render first step form 2`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="azure-key-vault"
        >
          <svg
            height="37"
            id="bc93169a-24c4-4686-9f37-c7e4f53b3d34"
            viewBox="0 0 18 18"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <radialgradient
                cx="9"
                cy="9"
                gradientUnits="userSpaceOnUse"
                id="fb114c93-7c16-4540-899a-0796041629e6"
                r="8.5"
              >
                <stop
                  offset="0.18"
                  stop-color="#5ea0ef"
                />
                <stop
                  offset="0.56"
                  stop-color="#5c9fee"
                />
                <stop
                  offset="0.69"
                  stop-color="#559ced"
                />
                <stop
                  offset="0.78"
                  stop-color="#4a97e9"
                />
                <stop
                  offset="0.86"
                  stop-color="#3990e4"
                />
                <stop
                  offset="0.93"
                  stop-color="#2387de"
                />
                <stop
                  offset="0.99"
                  stop-color="#087bd6"
                />
                <stop
                  offset="1"
                  stop-color="#0078d4"
                />
              </radialgradient>
              <radialgradient
                cx="38.95"
                cy="182.07"
                gradientTransform="translate(-28.71 -163.24) scale(0.94 0.94)"
                gradientUnits="userSpaceOnUse"
                id="ec478bd3-5b38-4e7f-b661-11f355578bff"
                r="9.88"
              >
                <stop
                  offset="0.27"
                  stop-color="#ffd70f"
                />
                <stop
                  offset="0.49"
                  stop-color="#ffcb12"
                />
                <stop
                  offset="0.88"
                  stop-color="#feac19"
                />
                <stop
                  offset="1"
                  stop-color="#fea11b"
                />
              </radialgradient>
            </defs>
            <title>
              Icon-security-245
            </title>
            <path
              d="M9,.5A8.5,8.5,0,1,0,17.5,9,8.51,8.51,0,0,0,9,.5ZM9,16.34A7.34,7.34,0,1,1,16.34,9,7.34,7.34,0,0,1,9,16.34Z"
              fill="url(#fb114c93-7c16-4540-899a-0796041629e6)"
              id="aacf8311-a317-400f-b613-74bd00da5ce3"
            />
            <circle
              cx="9"
              cy="9"
              fill="#fff"
              r="7.34"
            />
            <g>
              <path
                d="M13.44,7.33a1.84,1.84,0,0,0,0-2.59h0L10.29,1.58a1.83,1.83,0,0,0-2.58,0h0L4.56,4.74a1.84,1.84,0,0,0,0,2.59L7.18,10a.51.51,0,0,1,.15.36v4.88a.63.63,0,0,0,.18.44l1.2,1.2a.41.41,0,0,0,.58,0l1.16-1.16h0l.68-.68a.25.25,0,0,0,0-.34l-.49-.49a.27.27,0,0,1,0-.37l.49-.49a.25.25,0,0,0,0-.34l-.49-.49a.27.27,0,0,1,0-.37l.49-.49a.25.25,0,0,0,0-.34l-.68-.69v-.25ZM9,2.35A1,1,0,0,1,9,4.42,1,1,0,1,1,9,2.35Z"
                fill="url(#ec478bd3-5b38-4e7f-b661-11f355578bff)"
                id="bd983c41-db73-40ec-a4f4-da1213fc9924"
              />
              <path
                d="M8.18,15.3h0a.23.23,0,0,0,.38-.17v-4a.24.24,0,0,0-.11-.2h0a.22.22,0,0,0-.34.2v4A.28.28,0,0,0,8.18,15.3Z"
                fill="#ff9300"
                id="ad2e7e44-9bfd-4775-8bf4-8ef26a544921"
                opacity="0.75"
              />
              <rect
                fill="#ff9300"
                height="0.61"
                id="a996fbff-3936-4b24-b407-369336c143ba"
                opacity="0.75"
                rx="0.28"
                width="5.17"
                x="6.48"
                y="5.79"
              />
              <rect
                fill="#ff9300"
                height="0.61"
                id="bb12d31c-3352-4a18-87dd-a169a4a8721d"
                opacity="0.75"
                rx="0.28"
                width="5.17"
                x="6.48"
                y="6.78"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.azureKeyVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.azureKeyVault.labels.setupVault
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          5
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--padding-bottom-xlarge"
        >
          details
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main formHeight StyledProps--margin-top-medium StyledProps--margin-bottom-xxlarge"
              >
                <div
                  class="bp3-form-group"
                  data-id="clientId-0"
                >
                  <label
                    class="bp3-label"
                    for="clientId"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureKeyVaultForm_clientId"
                    >
                      common.clientId
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="clientId"
                        type="text"
                        value="dummy clientId"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="tenantId-1"
                >
                  <label
                    class="bp3-label"
                    for="tenantId"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureKeyVaultForm_tenantId"
                    >
                      connectors.azureKeyVault.labels.tenantId
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="tenantId"
                        type="text"
                        value="dummy tenantId"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="subscription-2"
                >
                  <label
                    class="bp3-label"
                    for="subscription"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="azureKeyVaultForm_subscription"
                    >
                      connectors.azureKeyVault.labels.subscription
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="subscription"
                        type="text"
                        value="dummy subscription"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="null-3"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--vertical StyledProps--main"
                    >
                      <label
                        class="bp3-label"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="azureKeyVaultForm_secretKey"
                        >
                          keyLabel
                        </span>
                      </label>
                      <div
                        class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                      >
                        <a
                          class="containerLink"
                          data-testid="secretKey"
                          href="/account/dummy/settings/resources/connectors"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="key-main"
                            style="height: 12px;"
                          >
                            <svg
                              height="24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                fill-rule="nonzero"
                                stroke="#1C1C28"
                                stroke-width="0.5"
                              >
                                <path
                                  d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118c.118.01.223.067.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                                />
                                <path
                                  d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                                />
                              </g>
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                          >
                            <div>
                              secrets.secret.configureSecret
                            </div>
                            <div>
                              &lt;mockSecret&gt;
                            </div>
                          </p>
                        </a>
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main containerEditBtn Button--with-current-color Button--without-shadow"
                          data-testid="secretKey-edit"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--color StyledProps--color-primary7"
                              icon="edit"
                            >
                              <svg
                                data-icon="edit"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  edit
                                </desc>
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="default-4"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <label
                      class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--padding-left-xxlarge StyledProps--inline"
                    >
                      <input
                        name="default"
                        type="checkbox"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                        data-tooltip-id="azureKeyVaultForm_default"
                      >
                        connectors.hashiCorpVault.defaultVault
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should be able to render first step form 3`] = `
<div>
  <div
    class="StepWizard--main wizardNav StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <span
        class="StepWizard--header"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="azure-key-vault"
        >
          <svg
            height="37"
            id="bc93169a-24c4-4686-9f37-c7e4f53b3d34"
            viewBox="0 0 18 18"
            width="37"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <radialgradient
                cx="9"
                cy="9"
                gradientUnits="userSpaceOnUse"
                id="fb114c93-7c16-4540-899a-0796041629e6"
                r="8.5"
              >
                <stop
                  offset="0.18"
                  stop-color="#5ea0ef"
                />
                <stop
                  offset="0.56"
                  stop-color="#5c9fee"
                />
                <stop
                  offset="0.69"
                  stop-color="#559ced"
                />
                <stop
                  offset="0.78"
                  stop-color="#4a97e9"
                />
                <stop
                  offset="0.86"
                  stop-color="#3990e4"
                />
                <stop
                  offset="0.93"
                  stop-color="#2387de"
                />
                <stop
                  offset="0.99"
                  stop-color="#087bd6"
                />
                <stop
                  offset="1"
                  stop-color="#0078d4"
                />
              </radialgradient>
              <radialgradient
                cx="38.95"
                cy="182.07"
                gradientTransform="translate(-28.71 -163.24) scale(0.94 0.94)"
                gradientUnits="userSpaceOnUse"
                id="ec478bd3-5b38-4e7f-b661-11f355578bff"
                r="9.88"
              >
                <stop
                  offset="0.27"
                  stop-color="#ffd70f"
                />
                <stop
                  offset="0.49"
                  stop-color="#ffcb12"
                />
                <stop
                  offset="0.88"
                  stop-color="#feac19"
                />
                <stop
                  offset="1"
                  stop-color="#fea11b"
                />
              </radialgradient>
            </defs>
            <title>
              Icon-security-245
            </title>
            <path
              d="M9,.5A8.5,8.5,0,1,0,17.5,9,8.51,8.51,0,0,0,9,.5ZM9,16.34A7.34,7.34,0,1,1,16.34,9,7.34,7.34,0,0,1,9,16.34Z"
              fill="url(#fb114c93-7c16-4540-899a-0796041629e6)"
              id="aacf8311-a317-400f-b613-74bd00da5ce3"
            />
            <circle
              cx="9"
              cy="9"
              fill="#fff"
              r="7.34"
            />
            <g>
              <path
                d="M13.44,7.33a1.84,1.84,0,0,0,0-2.59h0L10.29,1.58a1.83,1.83,0,0,0-2.58,0h0L4.56,4.74a1.84,1.84,0,0,0,0,2.59L7.18,10a.51.51,0,0,1,.15.36v4.88a.63.63,0,0,0,.18.44l1.2,1.2a.41.41,0,0,0,.58,0l1.16-1.16h0l.68-.68a.25.25,0,0,0,0-.34l-.49-.49a.27.27,0,0,1,0-.37l.49-.49a.25.25,0,0,0,0-.34l-.49-.49a.27.27,0,0,1,0-.37l.49-.49a.25.25,0,0,0,0-.34l-.68-.69v-.25ZM9,2.35A1,1,0,0,1,9,4.42,1,1,0,1,1,9,2.35Z"
                fill="url(#ec478bd3-5b38-4e7f-b661-11f355578bff)"
                id="bd983c41-db73-40ec-a4f4-da1213fc9924"
              />
              <path
                d="M8.18,15.3h0a.23.23,0,0,0,.38-.17v-4a.24.24,0,0,0-.11-.2h0a.22.22,0,0,0-.34.2v4A.28.28,0,0,0,8.18,15.3Z"
                fill="#ff9300"
                id="ad2e7e44-9bfd-4775-8bf4-8ef26a544921"
                opacity="0.75"
              />
              <rect
                fill="#ff9300"
                height="0.61"
                id="a996fbff-3936-4b24-b407-369336c143ba"
                opacity="0.75"
                rx="0.28"
                width="5.17"
                x="6.48"
                y="5.79"
              />
              <rect
                fill="#ff9300"
                height="0.61"
                id="bb12d31c-3352-4a18-87dd-a169a4a8721d"
                opacity="0.75"
                rx="0.28"
                width="5.17"
                x="6.48"
                y="6.78"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="StepWizard--title StepWizard--header"
      >
        connectors.title.azureKeyVault
      </span>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          overview
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          details
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          delegate.DelegateselectionLabel
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          4
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.azureKeyVault.labels.setupVault
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          5
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.stepThreeName
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium"
        style="width: 64%;"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
        >
          connectors.azureKeyVault.labels.setupVault
        </p>
        <div
          class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xlarge"
        />
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="StyledProps--font StyledProps--main"
                style="height: 490px;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
                >
                  <div
                    class="bp3-form-group bp3-disabled"
                    data-id="vaultName-0"
                  >
                    <label
                      class="bp3-label"
                      for="vaultName"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="azureKeyVaultForm_vaultName"
                      >
                        connectors.azureKeyVault.labels.vaultName
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group bp3-disabled"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              disabled=""
                              name="vaultName"
                              placeholder="- Select -"
                              style="padding-right: 0px;"
                              type="text"
                              value=""
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-large StyledProps--intent-primary Button--with-current-color"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      connectors.azureKeyVault.labels.fetchVault
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    saveAndContinue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
